all po files updated from develop at 2019-12-26 06:36

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -125,11 +125,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7265,6 +7265,10 @@ msgstr "إستعاده"
 msgid "Restore backups"
 msgstr "استعادة نسخ احتياطية"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "استعادة نسخ احتياطية"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -8180,9 +8184,6 @@ msgid "Set blocktimes by weekday"
 msgstr ""
 
 msgid "Set default"
-msgstr ""
-
-msgid "Set default settings?"
 msgstr ""
 
 #
@@ -12307,6 +12308,9 @@ msgstr "ملف قالب"
 msgid "tennis/squash"
 msgstr ""
 
+msgid "testing"
+msgstr "يعمل"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -12441,9 +12445,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-msgid "testing"
-msgstr "يعمل"
 
 msgid "xp1000"
 msgstr ""
