--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -122,11 +122,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7776,6 +7776,10 @@ msgstr "Gendanne"
 msgid "Restore backups"
 msgstr "Gendan backup"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Sæt standard"
+
 msgid "Restore deleted user bouquets"
 msgstr "Gendan slettede brugerbouquets"
 
@@ -8739,9 +8743,6 @@ msgstr ""
 
 msgid "Set default"
 msgstr "Sæt standard"
-
-msgid "Set default settings?"
-msgstr "Indstil standardindstillinger?"
 
 #
 msgid "Set end time"
@@ -13142,6 +13143,10 @@ msgstr "skabelon fil"
 msgid "tennis/squash"
 msgstr "tennis/squash"
 
+#
+msgid "testing"
+msgstr "fungerer"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "denne bouquet er beskyttet af forældrekontrol pin"
 
@@ -13277,10 +13282,6 @@ msgstr "med tunernavn"
 
 msgid "with_errors"
 msgstr "med_fejl"
-
-#
-msgid "testing"
-msgstr "fungerer"
 
 msgid "xp1000"
 msgstr "xp1000"
