--- a/po/de.po
+++ b/po/de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-11-28 17:53+0100\n"
 "Last-Translator: Pike_Bishop <alfredzngr023@gmail.com>\n"
 "Language-Team: Sfteam  angelo2807@hotmail.com\n"
@@ -6776,6 +6776,10 @@ msgstr "Zurückspielen"
 msgid "Restore backups"
 msgstr "Einstellungen wiederherstellen"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Als Standard setzen"
+
 msgid "Restore deleted user bouquets"
 msgstr "Gelöschte Userbouquets wiederherstellen"
 
@@ -7607,9 +7611,6 @@ msgstr "Setze Blockzeiten nach Wochentag"
 
 msgid "Set default"
 msgstr "Als Standard setzen"
-
-msgid "Set default settings?"
-msgstr "Standardeinstellungen festlegen?"
 
 msgid "Set end time"
 msgstr "End-Zeit eingeben"
@@ -11498,6 +11499,9 @@ msgstr "Dateivorlage"
 msgid "tennis/squash"
 msgstr "Tennis/Squash"
 
+msgid "testing"
+msgstr "Arbeite"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "Dieses Bouquet ist durch einen Jugendschutz-PIN Code geschützt"
 
@@ -11617,9 +11621,6 @@ msgstr "mit Tuner Namen"
 
 msgid "with_errors"
 msgstr "mit_Fehlern"
-
-msgid "testing"
-msgstr "Arbeite"
 
 msgid "xp1000"
 msgstr "xp1000"
