--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: MCelliotG <mcelliotg@gmail.com>\n"
 "Language-Team: MCelliotG <mcelliotg@gmail.com>\n"
@@ -6763,6 +6763,10 @@ msgstr "Επαναφορά"
 msgid "Restore backups"
 msgstr "Επαναφορά αντιγράφων ασφαλείας"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Ορισμός προεπιλογής"
+
 msgid "Restore deleted user bouquets"
 msgstr "Επαναφορά διαγραμμένων μπουκέτων χρήστη"
 
@@ -7594,9 +7598,6 @@ msgstr "Ορισμός χρονοπλαισίων ανά"
 
 msgid "Set default"
 msgstr "Ορισμός προεπιλογής"
-
-msgid "Set default settings?"
-msgstr "Ορισμός προεπιλογών;"
 
 msgid "Set end time"
 msgstr "Ρύθμιση χρόνου τερματισμού"
@@ -11469,6 +11470,9 @@ msgstr "αρχείο προτύπου"
 msgid "tennis/squash"
 msgstr "τένις/σκουώς"
 
+msgid "testing"
+msgstr "υπό έλεγχο"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "αυτό το μπουκέτο προστατεύεται με γονικό κωδικό pin"
 
@@ -11588,9 +11592,6 @@ msgstr "με όνομα tuner"
 
 msgid "with_errors"
 msgstr "με_σφάλματα"
-
-msgid "testing"
-msgstr "υπό έλεγχο"
 
 msgid "xp1000"
 msgstr "xp1000"
