--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-05-15 22:50+0200\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
@@ -126,11 +126,11 @@ msgid "%.0f kB"
 msgstr "%.0f kB"
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7606,6 +7606,10 @@ msgstr "Restaurar"
 msgid "Restore backups"
 msgstr "Restaurar backups"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Establecer predeterminado"
+
 msgid "Restore deleted user bouquets"
 msgstr "Restaurar los userbouquets eliminados"
 
@@ -8532,9 +8536,6 @@ msgstr "Establecer tiempos de bloque por día de la semana"
 
 msgid "Set default"
 msgstr "Establecer predeterminado"
-
-msgid "Set default settings?"
-msgstr "¿Configura la configuración predeterminada?"
 
 msgid "Set end time"
 msgstr "Establecer el tiempo de finalización"
@@ -12848,6 +12849,10 @@ msgstr "fichero de plantilla"
 msgid "tennis/squash"
 msgstr "tennis/squash"
 
+#
+msgid "testing"
+msgstr "trabajando"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "Este ramo está protegido por un pin de control parental"
 
@@ -12982,10 +12987,6 @@ msgstr "Con el nombre del sintonizador"
 
 msgid "with_errors"
 msgstr "Con errores"
-
-#
-msgid "testing"
-msgstr "trabajando"
 
 msgid "xp1000"
 msgstr "xp1000"
