--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Openpli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-04-03 06:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -117,11 +117,11 @@ msgid "%.0f kB"
 msgstr "%.0f kB"
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -6798,6 +6798,10 @@ msgstr "Taasta"
 msgid "Restore backups"
 msgstr "Taasta varukoopia"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Sea vaikeseadesse"
+
 msgid "Restore deleted user bouquets"
 msgstr "Taasta kustutatud lemmiknimekirjad"
 
@@ -7642,9 +7646,6 @@ msgstr "Sea keeluajad nädalapäeviti"
 
 msgid "Set default"
 msgstr "Sea vaikeseadesse"
-
-msgid "Set default settings?"
-msgstr "Määrata vaikimisi seaded?"
 
 msgid "Set end time"
 msgstr "Määra lõppaeg"
@@ -11568,6 +11569,9 @@ msgstr "mallifail"
 msgid "tennis/squash"
 msgstr "tennis/squash"
 
+msgid "testing"
+msgstr "töös"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "see kanalivalik on kaitstud lapseluku PIN koodiga"
 
@@ -11688,9 +11692,6 @@ msgstr "koos tuuneri nimega"
 
 msgid "with_errors"
 msgstr "vigadega"
-
-msgid "testing"
-msgstr "töös"
 
 msgid "xp1000"
 msgstr "xp1000"
