--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-02-13 20:52+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -122,11 +122,11 @@ msgid "%.0f kB"
 msgstr "%.0f kB"
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7609,6 +7609,10 @@ msgstr "Palauta"
 msgid "Restore backups"
 msgstr "Palauta varmuuskopiot"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Oletus"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -8551,9 +8555,6 @@ msgstr "Aseta aikaväli päiväkohtaisesti"
 
 msgid "Set default"
 msgstr "Oletus"
-
-msgid "Set default settings?"
-msgstr ""
 
 #
 msgid "Set end time"
@@ -12871,6 +12872,10 @@ msgid "tennis/squash"
 msgstr "tennis/squash"
 
 #
+msgid "testing"
+msgstr "Työskentelee"
+
+#
 msgid "this bouquet is protected by a parental control pin"
 msgstr "Tämä kanava on suojattu lapsilukolla"
 
@@ -13007,10 +13012,6 @@ msgstr "virittimen nimellä"
 
 msgid "with_errors"
 msgstr ""
-
-#
-msgid "testing"
-msgstr "Työskentelee"
 
 msgid "xp1000"
 msgstr ""
