--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
-"PO-Revision-Date: 2019-11-18 19:06+0100\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
+"PO-Revision-Date: 2019-12-26 06:36+0100\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -6765,6 +6765,9 @@ msgstr "Restaurer"
 msgid "Restore backups"
 msgstr "Restaurer sauvegardes"
 
+msgid "Restore defaults"
+msgstr "Restorer les valeurs par défaut"
+
 msgid "Restore deleted user bouquets"
 msgstr "Restaurer les bouquets utilisateurs supprimés"
 
@@ -7596,9 +7599,6 @@ msgstr "Définir les périodes de blocage par semaine"
 
 msgid "Set default"
 msgstr "Définir par défaut"
-
-msgid "Set default settings?"
-msgstr "Définir comme paramètre par défaut?"
 
 msgid "Set end time"
 msgstr "Régler l'heure de fin"
@@ -8636,7 +8636,7 @@ msgstr ""
 "\n"
 "Traducteur: Pr2\n"
 "Support: www.openpli.org\n"
-"Dernière MAJ: 30-11-2019"
+"Dernière MAJ: 26-12-2019"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -8666,7 +8666,7 @@ msgid "Tags"
 msgstr "Etiquettes"
 
 msgid "Taiwan"
-msgstr ""
+msgstr "Taiwan"
 
 msgid "Tajikistan"
 msgstr "Tadjikistan"
@@ -11484,6 +11484,9 @@ msgstr "Fichier modèle"
 msgid "tennis/squash"
 msgstr "Tennis/Squash"
 
+msgid "testing"
+msgstr "Travail en cours..."
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "ce bouquet est protégé par un PIN contrôle parental"
 
@@ -11603,9 +11606,6 @@ msgstr "avec nom du tuner"
 
 msgid "with_errors"
 msgstr "Avec_erreurs"
-
-msgid "testing"
-msgstr "Travail en cours..."
 
 msgid "xp1000"
 msgstr "xp1000"
