--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-12-12 22:17+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -6781,6 +6781,10 @@ msgstr "Vraćanje"
 msgid "Restore backups"
 msgstr "Vraćanje sigurnosnih kopija"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Postavite zadano"
+
 msgid "Restore deleted user bouquets"
 msgstr "Vratite izbrisane korisničke pakete"
 
@@ -7615,9 +7619,6 @@ msgstr "Postavljanje se ignorira iz dana u dan"
 
 msgid "Set default"
 msgstr "Postavite zadano"
-
-msgid "Set default settings?"
-msgstr "Postaviti zadane postavke?"
 
 msgid "Set end time"
 msgstr "Postavite vrijeme završetka"
@@ -11490,6 +11491,9 @@ msgstr "predložak datoteke"
 msgid "tennis/squash"
 msgstr "tenis/squash"
 
+msgid "testing"
+msgstr "u radu"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "ovaj paket je zaštićen pinom roditeljske kontrole"
 
@@ -11610,9 +11614,6 @@ msgstr "s imenom tjunera"
 
 msgid "with_errors"
 msgstr "s_greškama"
-
-msgid "testing"
-msgstr "u radu"
 
 msgid "xp1000"
 msgstr "xp1000"
