--- a/po/hu.po
+++ b/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-12-02 21:50+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
@@ -6762,6 +6762,10 @@ msgstr "Visszaállítás"
 msgid "Restore backups"
 msgstr "Mentések visszaállítása"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Alapértelmezett"
+
 msgid "Restore deleted user bouquets"
 msgstr "Törölt felhasználói listák visszaállítása"
 
@@ -7593,9 +7597,6 @@ msgstr "Blokkidők megadása a hét napjai alapján"
 
 msgid "Set default"
 msgstr "Alapértelmezett"
-
-msgid "Set default settings?"
-msgstr "Alapértelmezett beállítások?"
 
 msgid "Set end time"
 msgstr "Befejezési idő"
@@ -11474,6 +11475,9 @@ msgstr "sablon-fájl"
 msgid "tennis/squash"
 msgstr "tenisz/fallabda"
 
+msgid "testing"
+msgstr "működőképes"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "ez a lista gyermekzár PIN-kóddal védett"
 
@@ -11593,9 +11597,6 @@ msgstr "tuner névvel"
 
 msgid "with_errors"
 msgstr "hibákkal"
-
-msgid "testing"
-msgstr "működőképes"
 
 msgid "xp1000"
 msgstr "xp1000"
