--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2018-05-22 13:54+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -123,11 +123,11 @@ msgid "%.0f kB"
 msgstr "%.0f kB"
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -6759,6 +6759,10 @@ msgstr "Ripristinare"
 msgid "Restore backups"
 msgstr "Ripristino dei backup"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Ripristinare i valori"
+
 msgid "Restore deleted user bouquets"
 msgstr "Ripristinare i bouquet eliminati"
 
@@ -7590,9 +7594,6 @@ msgstr "Impostare i blocchi di orario per i giorni della settimana"
 
 msgid "Set default"
 msgstr "Ripristinare i valori"
-
-msgid "Set default settings?"
-msgstr "Reimpostare i valori predefiniti?"
 
 msgid "Set end time"
 msgstr "Impostare ora fine"
@@ -11484,6 +11485,9 @@ msgstr "File modello"
 msgid "tennis/squash"
 msgstr "Tennis/Squash"
 
+msgid "testing"
+msgstr "funzionante"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "Questo bouquet è protetto con il PIN del Controllo genitori"
 
@@ -11603,9 +11607,6 @@ msgstr "Con nome sintonizzatore"
 
 msgid "with_errors"
 msgstr "Con errori"
-
-msgid "testing"
-msgstr "funzionante"
 
 msgid "xp1000"
 msgstr "xp1000"
