--- a/po/ku.po
+++ b/po/ku.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 Kurdish translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2013-04-22 04:29+0330\n"
 "Last-Translator: dimili21\n"
 "Language-Team: \n"
@@ -117,11 +117,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -6848,6 +6848,10 @@ msgstr "Restore"
 msgid "Restore backups"
 msgstr "Restore backups"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Restore backups"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -7700,9 +7704,6 @@ msgid "Set blocktimes by weekday"
 msgstr ""
 
 msgid "Set default"
-msgstr ""
-
-msgid "Set default settings?"
 msgstr ""
 
 msgid "Set end time"
@@ -11600,6 +11601,9 @@ msgstr "template file"
 msgid "tennis/squash"
 msgstr "tennis/squash"
 
+msgid "testing"
+msgstr "testing"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -11721,9 +11725,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-msgid "testing"
-msgstr "testing"
 
 msgid "xp1000"
 msgstr ""
