--- a/po/lt.po
+++ b/po/lt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-11-28 20:02+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -6780,6 +6780,10 @@ msgstr "Atkurti"
 msgid "Restore backups"
 msgstr "Atkurti atsargines kopijas"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Nustatykite numatytuoju"
+
 msgid "Restore deleted user bouquets"
 msgstr "Atkurti ištrintus vartotojo paketus"
 
@@ -7614,9 +7618,6 @@ msgstr "Nustatykite blokavimo kartus pagal savaitės dieną"
 
 msgid "Set default"
 msgstr "Nustatykite numatytuoju"
-
-msgid "Set default settings?"
-msgstr "Nustatyti numatytus parametrus?"
 
 msgid "Set end time"
 msgstr "Nustatykite pabaigos laiką"
@@ -11496,6 +11497,9 @@ msgstr "šablono failas"
 msgid "tennis/squash"
 msgstr "tenisas, skvošas"
 
+msgid "testing"
+msgstr "dirba"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "šis paketas apsaugotas tėvų kontrolės PIN kodu"
 
@@ -11616,9 +11620,6 @@ msgstr "su imtuvo pavadinimu"
 
 msgid "with_errors"
 msgstr "su klaidomis"
-
-msgid "testing"
-msgstr "dirba"
 
 msgid "xp1000"
 msgstr "xp1000"
