--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -118,11 +118,11 @@ msgid "%.0f kB"
 msgstr "%.0f kB"
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -6791,6 +6791,10 @@ msgstr "Atjaunot"
 msgid "Restore backups"
 msgstr "Atjaunot dublējumkopiju"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Pēc noklusējuma"
+
 msgid "Restore deleted user bouquets"
 msgstr "Atjaunot dzēstās buķetes"
 
@@ -7627,9 +7631,6 @@ msgstr "Iestatīt bloķēšanas laikus pa dienām"
 
 msgid "Set default"
 msgstr "Pēc noklusējuma"
-
-msgid "Set default settings?"
-msgstr "Iestatīt pēc noklusējuma?"
 
 msgid "Set end time"
 msgstr "Iestatīt beigu laiku"
@@ -11509,6 +11510,9 @@ msgstr "šablona fails"
 msgid "tennis/squash"
 msgstr "teniss/skvošs"
 
+msgid "testing"
+msgstr "darbojas"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "šī buķete ir aizsargāta ar vecāku aizsardzību"
 
@@ -11630,9 +11634,6 @@ msgstr "ar uztvērēja nosaukumu"
 
 msgid "with_errors"
 msgstr "ar_kļūdām"
-
-msgid "testing"
-msgstr "darbojas"
 
 msgid "xp1000"
 msgstr "xp1000"
