--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-12-06 15:54+0100\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -7556,6 +7556,11 @@ msgstr "Gjenopprett"
 msgid "Restore backups"
 msgstr "Gjenopprett sikkerhetskopier"
 
+#
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Sett standard"
+
 msgid "Restore deleted user bouquets"
 msgstr "Gjenopprett slettede kanallister"
 
@@ -8474,10 +8479,6 @@ msgstr "Still inn blokkeringstid med ukedager"
 #
 msgid "Set default"
 msgstr "Sett standard"
-
-#
-msgid "Set default settings?"
-msgstr "Velge standardinnstillinger?"
 
 #
 msgid "Set end time"
@@ -12769,6 +12770,10 @@ msgid "tennis/squash"
 msgstr "tennis/squash"
 
 #
+msgid "testing"
+msgstr "arbeider"
+
+#
 msgid "this bouquet is protected by a parental control pin"
 msgstr "denne kanalliste er beskyttet av en pin kode i foreldrekontrollen"
 
@@ -12902,10 +12907,6 @@ msgstr "med tuner navn"
 
 msgid "with_errors"
 msgstr "med_feil"
-
-#
-msgid "testing"
-msgstr "arbeider"
 
 msgid "xp1000"
 msgstr "xp1000"
