--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -7000,6 +7000,10 @@ msgstr "Herstellen"
 msgid "Restore backups"
 msgstr "Backups terugzetten"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Zet als standaard"
+
 msgid "Restore deleted user bouquets"
 msgstr "Herstel verwijderde gebruikersbouquet(ten)"
 
@@ -7834,9 +7838,6 @@ msgstr "Stel bloktijden in als wekelijks"
 
 msgid "Set default"
 msgstr "Zet als standaard"
-
-msgid "Set default settings?"
-msgstr "Naar standaard instellingen?"
 
 msgid "Set end time"
 msgstr "Stel de eindtijd in"
@@ -11786,6 +11787,9 @@ msgstr "sjabloonbestand"
 msgid "tennis/squash"
 msgstr "Tennis/Squash"
 
+msgid "testing"
+msgstr "bezig"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "Dit bouquet is beschermd met een pincode t.b.v. het kinderslot."
 
@@ -11905,9 +11909,6 @@ msgstr "Met de tunernaam"
 
 msgid "with_errors"
 msgstr "met_fouten"
-
-msgid "testing"
-msgstr "bezig"
 
 msgid "xp1000"
 msgstr "XP1000"
