--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -117,11 +117,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7509,6 +7509,11 @@ msgstr "Gjenopprette"
 msgid "Restore backups"
 msgstr "Gjenopprette sikkerhetskopier"
 
+#
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Gjenopprette sikkerhetskopier"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -8420,9 +8425,6 @@ msgid "Set blocktimes by weekday"
 msgstr ""
 
 msgid "Set default"
-msgstr ""
-
-msgid "Set default settings?"
 msgstr ""
 
 #
@@ -12684,6 +12686,10 @@ msgstr "filformat"
 msgid "tennis/squash"
 msgstr "tennis/squash"
 
+#
+msgid "testing"
+msgstr "fungerer"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -12816,10 +12822,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-#
-msgid "testing"
-msgstr "fungerer"
 
 msgid "xp1000"
 msgstr ""
