--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -119,11 +119,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7913,6 +7913,10 @@ msgstr "Restaurar"
 msgid "Restore backups"
 msgstr "Restauro de Backups"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Definir como padrão"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -8902,9 +8906,6 @@ msgstr ""
 
 msgid "Set default"
 msgstr "Definir como padrão"
-
-msgid "Set default settings?"
-msgstr ""
 
 #
 #, fuzzy
@@ -13380,6 +13381,10 @@ msgstr "ficheiro modelo"
 msgid "tennis/squash"
 msgstr "tennis/squash"
 
+#
+msgid "testing"
+msgstr "em curso"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -13515,10 +13520,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-#
-msgid "testing"
-msgstr "em curso"
 
 msgid "xp1000"
 msgstr ""
