--- a/po/ru.po
+++ b/po/ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-07-25 17:52+0300\n"
 "Last-Translator: Dimitrij <Dima-73@inbox.lv>\n"
 "Language-Team: openPLi Dimitrij\n"
@@ -6783,6 +6783,10 @@ msgstr "Восстановить"
 msgid "Restore backups"
 msgstr "Востановление бэкапов"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Установить по дефолту"
+
 msgid "Restore deleted user bouquets"
 msgstr "Восстановить удаленные пользовательские букеты"
 
@@ -7617,9 +7621,6 @@ msgstr "Установка время игнорирования по дням"
 
 msgid "Set default"
 msgstr "Установить по дефолту"
-
-msgid "Set default settings?"
-msgstr "Установить настройки по дефолту?"
 
 msgid "Set end time"
 msgstr "Установить время окончания"
@@ -11490,6 +11491,9 @@ msgstr "шаблон файла"
 msgid "tennis/squash"
 msgstr "теннис/сквош"
 
+msgid "testing"
+msgstr "в работе"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "этот букет защищен PIN-кодом родительского контроля"
 
@@ -11610,9 +11614,6 @@ msgstr "с именем тюнера"
 
 msgid "with_errors"
 msgstr "с ошибками"
-
-msgid "testing"
-msgstr "в работе"
 
 msgid "xp1000"
 msgstr "xp1000"
