--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-06-27 16:02+0200\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -117,11 +117,11 @@ msgid "%.0f kB"
 msgstr "%.0f kB"
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -6793,6 +6793,10 @@ msgstr "Obnoviť"
 msgid "Restore backups"
 msgstr "Obnoviť zálohy"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Nastaviť predvolené"
+
 msgid "Restore deleted user bouquets"
 msgstr "Obnoviť zmazané užívateľské zoznamy staníc"
 
@@ -7627,9 +7631,6 @@ msgstr "Nastaviť časy blokovania na víkend"
 
 msgid "Set default"
 msgstr "Nastaviť predvolené"
-
-msgid "Set default settings?"
-msgstr "Použiť predvolené nastavenia?"
 
 msgid "Set end time"
 msgstr "Čas ukončenia"
@@ -11508,6 +11509,9 @@ msgstr "šablóna"
 msgid "tennis/squash"
 msgstr "tenis/squash"
 
+msgid "testing"
+msgstr "pracujem"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "tento zoznam je chránený rodičovskou kontrolou"
 
@@ -11629,9 +11633,6 @@ msgstr "s názvom tunera"
 
 msgid "with_errors"
 msgstr "s chybami"
-
-msgid "testing"
-msgstr "pracujem"
 
 msgid "xp1000"
 msgstr "xp1000"
