--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2015-08-30 09:00+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -119,11 +119,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7894,6 +7894,11 @@ msgstr "Povrnitev prejšnjega stanja"
 msgid "Restore backups"
 msgstr "Povrnitev varnostne kopije"
 
+#
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Nastavi kot privzeto"
+
 msgid "Restore deleted user bouquets"
 msgstr "Obnova že izbrisanih seznamov kanalov"
 
@@ -8884,9 +8889,6 @@ msgstr ""
 #
 msgid "Set default"
 msgstr "Nastavi kot privzeto"
-
-msgid "Set default settings?"
-msgstr ""
 
 #
 msgid "Set end time"
@@ -13310,6 +13312,10 @@ msgstr "predloga"
 msgid "tennis/squash"
 msgstr ""
 
+#
+msgid "testing"
+msgstr "deluje"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "ta seznam kanalov je zaščiten s PIN kodo"
 
@@ -13448,10 +13454,6 @@ msgstr "z imenom kanalnika"
 
 msgid "with_errors"
 msgstr ""
-
-#
-msgid "testing"
-msgstr "deluje"
 
 msgid "xp1000"
 msgstr "xp1000"
