--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -122,11 +122,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7951,6 +7951,11 @@ msgstr "Vrati "
 msgid "Restore backups"
 msgstr "Vrati bekape"
 
+#
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Vrati bekape"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -8945,9 +8950,6 @@ msgid "Set blocktimes by weekday"
 msgstr ""
 
 msgid "Set default"
-msgstr ""
-
-msgid "Set default settings?"
 msgstr ""
 
 #
@@ -13382,6 +13384,10 @@ msgstr "Šablon datoteka"
 msgid "tennis/squash"
 msgstr ""
 
+#
+msgid "testing"
+msgstr "U radu"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -13520,10 +13526,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-#
-msgid "testing"
-msgstr "U radu"
 
 msgid "xp1000"
 msgstr ""
