--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -123,11 +123,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7736,6 +7736,10 @@ msgstr "Återställ"
 msgid "Restore backups"
 msgstr "Återställ säkerhetskopia"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Ange standard"
+
 msgid "Restore deleted user bouquets"
 msgstr "Återställ borttagna favoritlistor"
 
@@ -8695,9 +8699,6 @@ msgstr "Sätt blocktider med veckodag"
 
 msgid "Set default"
 msgstr "Ange standard"
-
-msgid "Set default settings?"
-msgstr "Ange standardinställningar?"
 
 #
 msgid "Set end time"
@@ -13116,6 +13117,10 @@ msgstr "mallfil"
 msgid "tennis/squash"
 msgstr "tennis / squash"
 
+#
+msgid "testing"
+msgstr "arbetar"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "denna favoritlista är skyddad av föräldraskyddskod"
 
@@ -13252,10 +13257,6 @@ msgstr "med tunernamn"
 
 msgid "with_errors"
 msgstr "med_fel"
-
-#
-msgid "testing"
-msgstr "arbetar"
 
 msgid "xp1000"
 msgstr ""
