--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
 "Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
 "Language-Team: gisclub.tv <http://gisclub.tv/>\n"
@@ -116,11 +116,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -6923,6 +6923,10 @@ msgstr "Відновити"
 msgid "Restore backups"
 msgstr "Відновлення резрвних копій"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Встановити за замовчуванням"
+
 msgid "Restore deleted user bouquets"
 msgstr "Відновити видалені  букети  користувача"
 
@@ -7784,9 +7788,6 @@ msgstr "Встановити блокування по буднях"
 
 msgid "Set default"
 msgstr "Встановити за замовчуванням"
-
-msgid "Set default settings?"
-msgstr "Налаштування параметрів за замовчуванням?"
 
 msgid "Set end time"
 msgstr "Встановити час закінчення"
@@ -11772,6 +11773,9 @@ msgstr "шаблон файла"
 msgid "tennis/squash"
 msgstr "теніс/сквош"
 
+msgid "testing"
+msgstr "працюючий"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "цей букет захищений батьківським контролем"
 
@@ -11894,9 +11898,6 @@ msgstr "з назвою тюнера"
 
 msgid "with_errors"
 msgstr "з помилками"
-
-msgid "testing"
-msgstr "працюючий"
 
 msgid "xp1000"
 msgstr "xp1000"
