--- a/po/vi.po
+++ b/po/vi.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2019-11-19 08:58+0700\n"
 "Last-Translator: krong\n"
 "Language-Team: none\n"
@@ -6762,6 +6762,10 @@ msgstr "Khôi phục"
 msgid "Restore backups"
 msgstr "Khôi phục bản sao lưu"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Đặt mặc định"
+
 msgid "Restore deleted user bouquets"
 msgstr "Khôi phục lại những người dùng đã xóa"
 
@@ -7593,9 +7597,6 @@ msgstr "Đặt blocktimes theo ngày trong tuần"
 
 msgid "Set default"
 msgstr "Đặt mặc định"
-
-msgid "Set default settings?"
-msgstr "Đặt cài đặt mặc định?"
 
 msgid "Set end time"
 msgstr "Đặt thời gian kết thúc"
@@ -11466,6 +11467,9 @@ msgstr "tệp mẫu"
 msgid "tennis/squash"
 msgstr "quần vợt / bóng quần"
 
+msgid "testing"
+msgstr "đang làm việc"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "gói kênh này được bảo vệ bởi một chốt kiểm soát của cha mẹ"
 
@@ -11585,9 +11589,6 @@ msgstr "với tên bộ chỉnh"
 
 msgid "with_errors"
 msgstr "có -nỗi"
-
-msgid "testing"
-msgstr "đang làm việc"
 
 msgid "xp1000"
 msgstr "xp1000"
