--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
@@ -110,11 +110,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -6843,6 +6843,10 @@ msgstr "Restore"
 msgid "Restore backups"
 msgstr "Restore backups"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Restore backups"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -7695,9 +7699,6 @@ msgid "Set blocktimes by weekday"
 msgstr ""
 
 msgid "Set default"
-msgstr ""
-
-msgid "Set default settings?"
 msgstr ""
 
 msgid "Set end time"
@@ -11598,6 +11599,9 @@ msgstr "template file"
 msgid "tennis/squash"
 msgstr "tennis/squash"
 
+msgid "testing"
+msgstr "testing"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -11719,9 +11723,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-msgid "testing"
-msgstr "testing"
 
 msgid "xp1000"
 msgstr ""
