--- a/po/he.po
+++ b/po/he.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -123,11 +123,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7359,6 +7359,10 @@ msgstr "שחזור"
 msgid "Restore backups"
 msgstr "שחזור גיבויים"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "שחזור גיבויים"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -8286,9 +8290,6 @@ msgid "Set blocktimes by weekday"
 msgstr ""
 
 msgid "Set default"
-msgstr ""
-
-msgid "Set default settings?"
 msgstr ""
 
 #
@@ -12449,6 +12450,9 @@ msgstr "קובץ תבנית"
 msgid "tennis/squash"
 msgstr ""
 
+msgid "testing"
+msgstr "עובד"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -12580,9 +12584,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-msgid "testing"
-msgstr "עובד"
 
 msgid "xp1000"
 msgstr ""
