--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno Pedode\n"
 "Language-Team: \n"
@@ -114,11 +114,11 @@ msgid "%.0f kB"
 msgstr "%.0f kB"
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -6922,6 +6922,10 @@ msgstr "Pemulihan"
 msgid "Restore backups"
 msgstr "Pulihkan cadangan"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Atur bawaan"
+
 msgid "Restore deleted user bouquets"
 msgstr "Kembalikan buketpengguna yg dihapus"
 
@@ -7777,9 +7781,6 @@ msgstr "Atur waktu blokir berdasarkan hari kerja"
 
 msgid "Set default"
 msgstr "Atur bawaan"
-
-msgid "Set default settings?"
-msgstr "Atur setelan bawaan?"
 
 msgid "Set end time"
 msgstr "Atur waktu berakhir"
@@ -11728,6 +11729,9 @@ msgstr "berkas template"
 msgid "tennis/squash"
 msgstr "tennis/squash"
 
+msgid "testing"
+msgstr "berfungsi"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr "buket ini dilindungi dgn pin pengawasan orangtua"
 
@@ -11849,9 +11853,6 @@ msgstr "dgn nama penala"
 
 msgid "with_errors"
 msgstr "dgn_kesalahan"
-
-msgid "testing"
-msgstr "berfungsi"
 
 msgid "xp1000"
 msgstr ""
