--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2011-05-07 12:23+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -120,11 +120,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7676,6 +7676,11 @@ msgstr "Setja inn"
 msgid "Restore backups"
 msgstr "Setja inn afrit"
 
+#
+#, fuzzy
+msgid "Restore defaults"
+msgstr "Setja inn afrit"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -8650,9 +8655,6 @@ msgid "Set blocktimes by weekday"
 msgstr ""
 
 msgid "Set default"
-msgstr ""
-
-msgid "Set default settings?"
 msgstr ""
 
 #, fuzzy
@@ -13037,6 +13039,10 @@ msgstr "sniðmáts skrá"
 msgid "tennis/squash"
 msgstr ""
 
+#
+msgid "testing"
+msgstr "er að vinna"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -13173,10 +13179,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-#
-msgid "testing"
-msgstr "er að vinna"
 
 msgid "xp1000"
 msgstr ""
