--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -113,11 +113,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -6975,6 +6975,10 @@ msgstr "Revenire"
 msgid "Restore backups"
 msgstr ""
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "listeaza stilul default"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -7851,9 +7855,6 @@ msgid "Set blocktimes by weekday"
 msgstr ""
 
 msgid "Set default"
-msgstr ""
-
-msgid "Set default settings?"
 msgstr ""
 
 #, fuzzy
@@ -11780,6 +11781,9 @@ msgstr "fisier template"
 msgid "tennis/squash"
 msgstr ""
 
+msgid "testing"
+msgstr "lucreaza"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -11901,9 +11905,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-msgid "testing"
-msgstr "lucreaza"
 
 msgid "xp1000"
 msgstr ""
