--- a/po/th.po
+++ b/po/th.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1-En-Th\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-11 19:39+0200\n"
+"POT-Creation-Date: 2019-12-26 06:24+0100\n"
 "PO-Revision-Date: 2010-04-08 18:13+0700\n"
 "Last-Translator: Tony - Thaidreambox\n"
 "Language-Team: Tony @ Thai Dreambox <tonyboyth@gmail.com>\n"
@@ -116,11 +116,11 @@ msgid "%.0f kB"
 msgstr ""
 
 #, python-format
-msgid "%.1f°E"
+msgid "%.1f° E"
 msgstr ""
 
 #, python-format
-msgid "%.1f°W"
+msgid "%.1f° W"
 msgstr ""
 
 #, python-format
@@ -7012,6 +7012,10 @@ msgstr "นำกลับมาใช้"
 msgid "Restore backups"
 msgstr "นำสำรองกลับมาใช้"
 
+#, fuzzy
+msgid "Restore defaults"
+msgstr "นำสำรองกลับมาใช้"
+
 msgid "Restore deleted user bouquets"
 msgstr ""
 
@@ -7889,9 +7893,6 @@ msgid "Set blocktimes by weekday"
 msgstr ""
 
 msgid "Set default"
-msgstr ""
-
-msgid "Set default settings?"
 msgstr ""
 
 #, fuzzy
@@ -11835,6 +11836,9 @@ msgstr "ไฟล์ต้นฉบับ"
 msgid "tennis/squash"
 msgstr ""
 
+msgid "testing"
+msgstr "กำลังทำงาน"
+
 msgid "this bouquet is protected by a parental control pin"
 msgstr ""
 
@@ -11956,9 +11960,6 @@ msgstr ""
 
 msgid "with_errors"
 msgstr ""
-
-msgid "testing"
-msgstr "กำลังทำงาน"
 
 msgid "xp1000"
 msgstr ""
